# kpfr

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
src/: error.rs  kubectl.rs  main.rs  model.rs  selection.rs
