[package]
name = "kpfr"
version = "1.0.0"
edition = "2024"

[dependencies]
console = "0.16.0"
ctrlc = { version = "3.4.7", features = ["termination"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs = "6.0.0"
indicatif = "0.18.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
